# xxtea

./: .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  appveyor.yml  bench.py  bench.sh  pyproject.toml  setup.py  xxtea.c  xxtea.py  xxtea_optimized.c
.github/workflows/: build.yml  codspeed.yml  create_release_notes.py  test.yml
tests/: test.py  test_benchmarks.py  test_big_endian.py  test_interpreters.py  test_vectorcall.py
