[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
enable = ["cpython-freethreading", "pypy", "pypy-eol", "graalpy"]

[[tool.cibuildwheel.overrides]]
select = "*-musllinux_{ppc64le,riscv64,s390x}"
build-frontend = "build"

[[tool.cibuildwheel.overrides]]
select = "*-ios*"
build-frontend = "build"
